# rumerce

./: .env.example  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.git_hooks/: pre-commit
.sqlx/: query-002d293c501005c025256289cb7ef4f89f767c53ad62a544b68cb7e8f6750c96.json  query-073a069a86669c2fdef6380d74696071694d9bfce70594737bdb3a5540d2270c.json  query-15aaa2991eeac0db2a05db136d5b3ae10b07d7c1ed2e82691fbb55420375b1ee.json  query-177131e432fe41af72d48df636b79822d3a016db98bcb607b2f3d0a4947abcef.json  query-1b02516f53f74dd82b6986375a8f1c526625ca56530759abd3d95713cdd083cd.json  query-22363865bd55b4e3d9acb9d3a2f938bd7788f6e74fff8f78ce2683a61b85a7b0.json  query-237595cc0820e6e0a0b517c7cc32bb90899cf179598825f516bfc09810f9cd60.json  query-242991e2a50b04a5b7b57ef78a610b32bc9ec7c512740be3dfd15afbd1c115cd.json  query-243a467bbf32a29930f63560592cb0fdeff59e2e6c3d1994ff535ce4ce64697d.json  query-2a6310f500369199f231a6f6bef02d95e7519785091ba1ea6bb9d45ccda9ee65.json  query-31d2689e5a321dc5ee5bdd1231d7c3d359261fcd13a778d9bca7ca391fd442df.json  query-380ce30f792d8f20b826a0c685d0335c70d831953d533d2db42130be5cadba24.json  query-38d6791fad441148401fb607ebb3db63dc1c7f2860e80364ece35a20034b0c85.json  query-3b1d6dc60e0c1f100d63c48ab12852210468aa56ce6d131556d1401ac491a2a6.json  query-410f3141edc51c3980f0947f8c1d89d9cc3c8c589bf1ef3397a9d2b90b660e10.json  query-463e3cb3cc41990e508d9159e6e4043629edcc6761ce8ccaddfafc51523b2991.json  query-48d2f8cf5dde42c1aa72a3dfdd74fee8fd052e762496dab6c994f4a6e00fa0e4.json  query-512ba9df62decca78fca90c74c43c6d21213fe1aff8c5d8e7942db44b5c11ce1.json  query-5870a152a5f49085051410ef8ff5515a6f5e3b31abee2ee7dab1a0f5a47d5e64.json  query-5981c4bf2a5c768af4832d5905e2f5eaba7e021ccd5926cb50f56d0a92eef2e9.json  query-5ce9c35bd093f92bed6f8ca9932427483d051c75636dcbfa6f85487bfe8e2f56.json  query-62a54e69a7ab2fa239b753e4b651f767c894ff371c57649ddc561c03cd2dc8a2.json  query-64cb599c6acd59ae2ca84bf69d0580a55d7698f4da3525afa560a3a0b4acc1f6.json  query-688fe209a11d0192017cf6079ca4c1f46530691e706467790fb95a39f1ac98a4.json  query-71bd91950150d5c1d7149c049084430b4b7062130120ff974435b55ff9e2e0e5.json  query-71e9cb81caf6b0a11e2f1b554a2a733d4c3ef1909e089cef4a66e46305c56f8a.json  (+22 more)
app/: package.json
(+305 files in other folders)
