[package]
name = "rumerce"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"]}
dotenvy = "0.15.7"
serde = { version =  "1.0.210", features = ["derive"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"  ] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1", features = ["v4", "serde"] }
