[package]
name = "rumerce"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
biscotti = "0.3.4"
chrono = { version = "0.4.38", features = ["serde"]}
cookie = "0.18.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
log = "0.4.22"
resend-rs = "0.9.1"
serde = { version =  "1.0.210", features = ["derive"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "macros" ] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing-subscriber = "0.3.18"
url = "2.5.2"
uuid = { version = "1", features = ["v4", "serde"] }
