[package]
name = "rumerce"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-valid = "0.20.0"
biscotti = "0.3.4"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
futures = "0.3.30"
http-body-util = "0.1.2"
log = "0.4.22"
resend-rs = "0.9.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
] }
testcontainers = "0.22.0"
testcontainers-modules = { version = "0.10.0", features = ["postgres"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors", "limit", "fs"] }
tracing-subscriber = "0.3.18"
url = "2.5.2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
